src/diffs/snapshots/reconcile__diffs__myers__tests__complex_diff.snap
---
source: reconcile/src/diffs/myers.rs
expression: result
snapshot_kind: text
---
[
    Equal(
        [
            Token {
                normalised: "a",
                original: "a",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Insert(
        [
            Token {
                normalised: "x",
                original: "x",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Delete(
        [
            Token {
                normalised: "b",
                original: "b",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Equal(
        [
            Token {
                normalised: "c",
                original: "c",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Insert(
        [
            Token {
                normalised: "y",
                original: "y",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Delete(
        [
            Token {
                normalised: "d",
                original: "d",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
]
