src/diffs/snapshots/reconcile__diffs__myers__tests__identical_content.snap
---
source: reconcile/src/diffs/myers.rs
expression: result
snapshot_kind: text
---
[
    Equal(
        [
            Token {
                normalised: "a",
                original: "a",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Equal(
        [
            Token {
                normalised: "b",
                original: "b",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
    Equal(
        [
            Token {
                normalised: "c",
                original: "c",
                is_left_joinable: true,
                is_right_joinable: true,
            },
        ],
    ),
]
